FIX: overflow hero and new font

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
   }
 
   .hero {
-    font-size: 4rem;
+    font-size: 8.25rem;
   }
 
   .work {
@@ -132,5 +132,6 @@
     left: 0;
     width: 100%;
     height: 100vh;
+    pointer-events: auto;
   }
 }
